--- a/ATHEMES.html
+++ b/ATHEMES.html
@@ -7,219 +7,221 @@
   <link rel="stylesheet" href="">
 </head>
 <body>
-  <header>
-    <a href="#">
-      <h3>ATHEMES</h3>
-    </a>
-    <nav>
+  <content>
+    <header>
+      <a href="#">
+        <h3>ATHEMES</h3>
+      </a>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">
+              <strong>HOME</strong>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <strong>THEME</strong>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <strong>SUPPORT</strong>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <strong>BLOG</strong>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <strong>MY ACCOUNT</strong>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <hr>
+    <section>
+      <h1>
+        <strong>AIRI</strong>
+      </h1>
+      <p>Airi is a powerful, flexible, and modern theme for your business website. Featuring Elementor integration, this theme is an outstanding choice for basically any kind of company or freelancer site. Bringing a wealth of customization opportunities, Airi is great if you want to start a website from scratch and it's even greater if you want to use a premade Elementor layout from our growing collection. What’s more, the theme offers WooCommerce support, making it easy to sell the products you showcase on your site to your audience.</p>
+      <img src="D:\New folder\airi-previews.png" alt="airi" />
+      <br>
+      <div>
+        <button>
+          <a href="#">
+            <strong>DEMOS</strong>
+          </a>
+        </button>
+        <button>
+          <a href="#">
+            <strong>DOWNLOAD</strong>
+          </a>
+        </button>
+        <button>
+          <a href="#">
+            <strong>GO PRO</strong>
+          </a>
+        </button>
+        <button>
+          <a href="#">
+            <strong>DOCUMENTATION</strong>
+          </a>
+        </button>
+      </div>
+      <hr>
+      <div>
+        <p>CURRENT VERSION:
+          <span>
+            <strong> 1.0.2</strong>
+          </span>
+        </p>
+        <p>LAST UPDATE:
+          <span>
+            <strong> 5 Nov 2018</strong>
+          </span>
+        </p>
+        <p>COMPATIBILITY:
+          <span>
+            <strong> 5.0</strong>
+          </span>
+        </p>
+        <a href="#">
+          <strong>SUPPORT</strong>
+        </a>
+      </div>
+    </section>
+    <section>
+      <h3>FEATURES</h3>
       <ul>
         <li>
-          <a href="#">
-            <strong>HOME</strong>
-          </a>
+          <img src="D:\New folder\Elementor.png" alt="airi" />
+          <div>
+            <h4>ELEMENTOR SUPPORT</h4>
+            <p>All the layouts in the Airi theme are built with the awesome Elementor plugin. You can easily ....</p>
+          </div>
         </li>
         <li>
-          <a href="#">
-            <strong>THEME</strong>
-          </a>
+          <img src="D:\New folder\airioptions.png" alt="airi" />
+          <div>
+            <h4>OPTIONS</h4>
+            <p>Change colors, set the fonts you want and more. All theme options are located in the powerful Theme Customizer.
+            </p>
+          </div>
         </li>
         <li>
-          <a href="#">
-            <strong>SUPPORT</strong>
-          </a>
+          <img src="D:\New folder\atumultipledemos.png" alt="airi" />
+          <div>
+            <h4>MULTIPLE DEMOS</h4>
+            <p>Airi includes a bunch of premade demos created with Elementor. Import the one you want, change the content, tweak the layout and your website is done.
+            </p>
+          </div>
         </li>
         <li>
-          <a href="#">
-            <strong>BLOG</strong>
-          </a>
+          <img src="D:\New folder\eCommerce.png" alt="airi" />
+          <div> 
+            <h4>WOOCOMMERCE</h4>
+            <p>Airi offers support for the hugely popular WooCommerce plugin. Selling your products will be a breeze.
+            </p>
+          </div>
         </li>
         <li>
-          <a href="#">
-            <strong>MY ACCOUNT</strong>
-          </a>
+          <img src="D:\New folder\tt-fonts.jpg" alt="airi" />
+          <div>
+            <h4>GOOGLE FONTS</h4>
+            <p>asily switch fonts from the Customizer and enjoy free access to an awesome selection of Google Fonts.
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="D:\New folder\tt-translation.jpg" alt="airi" />
+          <div>
+            <h4>TRANSLATION READY</h4>
+            <p>This theme is 100% translation ready and includes the necessary files in order to make the translation process a
+            </p>
+          </div>
         </li>
       </ul>
-    </nav>
-  </header>
-  <hr>
-  <section>
-    <h1>
-      <strong>AIRI</strong>
-    </h1>
-    <p>Airi is a powerful, flexible, and modern theme for your business website. Featuring Elementor integration, this theme is an outstanding choice for basically any kind of company or freelancer site. Bringing a wealth of customization opportunities, Airi is great if you want to start a website from scratch and it's even greater if you want to use a premade Elementor layout from our growing collection. What’s more, the theme offers WooCommerce support, making it easy to sell the products you showcase on your site to your audience.</p>
-    <img src="D:\New folder\airi-previews.png" alt="airi" />
-    <br>
-    <div>
-      <button>
-        <a href="#">
-          <strong>DEMOS</strong>
-        </a>
-      </button>
-      <button>
-        <a href="#">
-          <strong>DOWNLOAD</strong>
-        </a>
-      </button>
-      <button>
-        <a href="#">
-          <strong>GO PRO</strong>
-        </a>
-      </button>
-      <button>
-        <a href="#">
-          <strong>DOCUMENTATION</strong>
-        </a>
-      </button>
-    </div>
-    <hr>
-    <div>
-      <p>CURRENT VERSION:
-        <span>
-          <strong> 1.0.2</strong>
-        </span>
-      </p>
-      <p>LAST UPDATE:
-        <span>
-          <strong> 5 Nov 2018</strong>
-        </span>
-      </p>
-      <p>COMPATIBILITY:
-        <span>
-          <strong> 5.0</strong>
-        </span>
-      </p>
-      <a href="#">
-        <strong>SUPPORT</strong>
-      </a>
-    </div>
-  </section>
-  <section>
-    <h3>FEATURES</h3>
-    <ul>
-      <li>
-        <img src="D:\New folder\Elementor.png" alt="airi" />
-        <div>
-          <h4>ELEMENTOR SUPPORT</h4>
-          <p>All the layouts in the Airi theme are built with the awesome Elementor plugin. You can easily ....</p>
-        </div>
-      </li>
-      <li>
-        <img src="D:\New folder\airioptions.png" alt="airi" />
-        <div>
-          <h4>OPTIONS</h4>
-          <p>Change colors, set the fonts you want and more. All theme options are located in the powerful Theme Customizer.
-          </p>
-        </div>
-      </li>
-      <li>
-        <img src="D:\New folder\atumultipledemos.png" alt="airi" />
-        <div>
-          <h4>MULTIPLE DEMOS</h4>
-          <p>Airi includes a bunch of premade demos created with Elementor. Import the one you want, change the content, tweak the layout and your website is done.
-          </p>
-        </div>
-      </li>
-      <li>
-        <img src="D:\New folder\eCommerce.png" alt="airi" />
-        <div> 
-          <h4>WOOCOMMERCE</h4>
-          <p>Airi offers support for the hugely popular WooCommerce plugin. Selling your products will be a breeze.
-          </p>
-        </div>
-      </li>
-      <li>
-        <img src="D:\New folder\tt-fonts.jpg" alt="airi" />
-        <div>
-          <h4>GOOGLE FONTS</h4>
-          <p>asily switch fonts from the Customizer and enjoy free access to an awesome selection of Google Fonts.
-          </p>
-        </div>
-      </li>
-      <li>
-        <img src="D:\New folder\tt-translation.jpg" alt="airi" />
-        <div>
-          <h4>TRANSLATION READY</h4>
-          <p>This theme is 100% translation ready and includes the necessary files in order to make the translation process a
-          </p>
-        </div>
-      </li>
-    </ul>
-  </section>
-  <section>
-    <h3>INCLUDED IN EVERY THEME</h3>
-    <ul>
-      <li>
-        <img src="D:\New folder\f5.png" alt="airi" />
-        <div>
-          <h4>LIVE CUSTOMIZER</h4>
-          <p>We make use of the WordPress Customizer, which allows you to preview changes to your website live, in all of our themes. This is the future of website editing.
-          </p>
-        </div>
-      </li>
-      <li>
-        <img src="D:\New folder\f2.png" alt="airi" />
-        <div>
-          <h4>UPDATES</h4>
-          <p>The work doesn’t stop once we release a theme. We regularly release updates to fix any bugs, add new features (often based on customer feedback), and stay up to date with the latest version of WordPress.
-          </p>
-        </div>
-      </li>
-      <li>
-        <img src="D:\New folder\f7.png" alt="airi" />
-        <div>
-          <h4>TRANSLATION READY</h4>
-          <p>Our themes follow the best internalization practices and therefore are ready to be translated into your language.
-          </p>
-        </div>
-      </li>
-      <li>
-        <img src="D:\New folder\f6.png" alt="airi" />
-        <div>
-          <h4>CROSS BROWSER SUPPORT</h4>
-          <p>We support the most popular modern web browsers: Chrome, Firefox, IE9+ and Opera.
-          </p>
-        </div>
-      </li>
-      <li>
-        <img src="D:\New folder\user-1.png" alt="airi" />
-        <div> 
-          <h4>FAST SUPPORT</h4>
-          <p>Our customers love our rapid and friendly support. Our themes are simple and easy to use, but if you need help, our support forum is always open.
-          </p>
-        </div>
-      </li>
-      <li>
-        <img src="D:\New folder\f8.png" alt="airi" />
-        <div> 
-          <h4>WORDPRESS BEST PRACTICES</h4>
-          <p>We follow WordPress coding best practices, as laid out by the WordPress.org theme review team, so you can be sure your theme is coded to the highest standards.
-          </p>
-        </div>
-      </li>
-    </ul>
-    <div>
-      <button>
-        <a href="#">
-          <strong>DEMOS</strong>
-        </a>
-      </button>
-      <button>
-        <a href="#">
-          <strong>DOWNLOAD</strong>
-        </a>
-      </button>
-      <button>
-        <a href="#">
-          <strong>GO PRO</strong>
-        </a>
-      </button>
-      <button>
-        <a href="#">
-          <strong>DOCUMENTATION</strong>
-        </a>
-      </button>
-    </div>
-  </section>
+    </section>
+    <section>
+      <h3>INCLUDED IN EVERY THEME</h3>
+      <ul>
+        <li>
+          <img src="D:\New folder\f5.png" alt="airi" />
+          <div>
+            <h4>LIVE CUSTOMIZER</h4>
+            <p>We make use of the WordPress Customizer, which allows you to preview changes to your website live, in all of our themes. This is the future of website editing.
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="D:\New folder\f2.png" alt="airi" />
+          <div>
+            <h4>UPDATES</h4>
+            <p>The work doesn’t stop once we release a theme. We regularly release updates to fix any bugs, add new features (often based on customer feedback), and stay up to date with the latest version of WordPress.
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="D:\New folder\f7.png" alt="airi" />
+          <div>
+            <h4>TRANSLATION READY</h4>
+            <p>Our themes follow the best internalization practices and therefore are ready to be translated into your language.
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="D:\New folder\f6.png" alt="airi" />
+          <div>
+            <h4>CROSS BROWSER SUPPORT</h4>
+            <p>We support the most popular modern web browsers: Chrome, Firefox, IE9+ and Opera.
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="D:\New folder\user-1.png" alt="airi" />
+          <div> 
+            <h4>FAST SUPPORT</h4>
+            <p>Our customers love our rapid and friendly support. Our themes are simple and easy to use, but if you need help, our support forum is always open.
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="D:\New folder\f8.png" alt="airi" />
+          <div> 
+            <h4>WORDPRESS BEST PRACTICES</h4>
+            <p>We follow WordPress coding best practices, as laid out by the WordPress.org theme review team, so you can be sure your theme is coded to the highest standards.
+            </p>
+          </div>
+        </li>
+      </ul>
+      <div>
+        <button>
+          <a href="#">
+            <strong>DEMOS</strong>
+          </a>
+        </button>
+        <button>
+          <a href="#">
+            <strong>DOWNLOAD</strong>
+          </a>
+        </button>
+        <button>
+          <a href="#">
+            <strong>GO PRO</strong>
+          </a>
+        </button>
+        <button>
+          <a href="#">
+            <strong>DOCUMENTATION</strong>
+          </a>
+        </button>
+      </div>
+    </section>
+  </content>
   <footer>
     <div>
       <h4>
