change code lan n

--- a/ATHEMES.html
+++ b/ATHEMES.html
@@ -108,40 +108,35 @@
           <img src="D:\New folder\airioptions.png" alt="airi" />
           <div>
             <h4>OPTIONS</h4>
-            <p>Change colors, set the fonts you want and more. All theme options are located in the powerful Theme Customizer.
-            </p>
+            <p>Change colors, set the fonts you want and more. All theme options are located in the powerful Theme Customizer.</p>
           </div>
         </li>
         <li>
           <img src="D:\New folder\atumultipledemos.png" alt="airi" />
           <div>
             <h4>MULTIPLE DEMOS</h4>
-            <p>Airi includes a bunch of premade demos created with Elementor. Import the one you want, change the content, tweak the layout and your website is done.
-            </p>
+            <p>Airi includes a bunch of premade demos created with Elementor. Import the one you want, change the content, tweak the layout and your website is done.</p>
           </div>
         </li>
         <li>
           <img src="D:\New folder\eCommerce.png" alt="airi" />
           <div> 
             <h4>WOOCOMMERCE</h4>
-            <p>Airi offers support for the hugely popular WooCommerce plugin. Selling your products will be a breeze.
-            </p>
+            <p>Airi offers support for the hugely popular WooCommerce plugin. Selling your products will be a breeze.</p>
           </div>
         </li>
         <li>
           <img src="D:\New folder\tt-fonts.jpg" alt="airi" />
           <div>
             <h4>GOOGLE FONTS</h4>
-            <p>asily switch fonts from the Customizer and enjoy free access to an awesome selection of Google Fonts.
-            </p>
+            <p>asily switch fonts from the Customizer and enjoy free access to an awesome selection of Google Fonts.</p>
           </div>
         </li>
         <li>
           <img src="D:\New folder\tt-translation.jpg" alt="airi" />
           <div>
             <h4>TRANSLATION READY</h4>
-            <p>This theme is 100% translation ready and includes the necessary files in order to make the translation process a
-            </p>
+            <p>This theme is 100% translation ready and includes the necessary files in order to make the translation process a</p>
           </div>
         </li>
       </ul>
@@ -153,48 +148,42 @@
           <img src="D:\New folder\f5.png" alt="airi" />
           <div>
             <h4>LIVE CUSTOMIZER</h4>
-            <p>We make use of the WordPress Customizer, which allows you to preview changes to your website live, in all of our themes. This is the future of website editing.
-            </p>
+            <p>We make use of the WordPress Customizer, which allows you to preview changes to your website live, in all of our themes. This is the future of website editing.</p>
           </div>
         </li>
         <li>
           <img src="D:\New folder\f2.png" alt="airi" />
           <div>
             <h4>UPDATES</h4>
-            <p>The work doesn’t stop once we release a theme. We regularly release updates to fix any bugs, add new features (often based on customer feedback), and stay up to date with the latest version of WordPress.
-            </p>
+            <p>The work doesn’t stop once we release a theme. We regularly release updates to fix any bugs, add new features (often based on customer feedback), and stay up to date with the latest version of WordPress.</p>
           </div>
         </li>
         <li>
           <img src="D:\New folder\f7.png" alt="airi" />
           <div>
             <h4>TRANSLATION READY</h4>
-            <p>Our themes follow the best internalization practices and therefore are ready to be translated into your language.
-            </p>
+            <p>Our themes follow the best internalization practices and therefore are ready to be translated into your language.</p>
           </div>
         </li>
         <li>
           <img src="D:\New folder\f6.png" alt="airi" />
           <div>
             <h4>CROSS BROWSER SUPPORT</h4>
-            <p>We support the most popular modern web browsers: Chrome, Firefox, IE9+ and Opera.
-            </p>
+            <p>We support the most popular modern web browsers: Chrome, Firefox, IE9+ and Opera.</p>
           </div>
         </li>
         <li>
           <img src="D:\New folder\user-1.png" alt="airi" />
           <div> 
             <h4>FAST SUPPORT</h4>
-            <p>Our customers love our rapid and friendly support. Our themes are simple and easy to use, but if you need help, our support forum is always open.
-            </p>
+            <p>Our customers love our rapid and friendly support. Our themes are simple and easy to use, but if you need help, our support forum is always open.</p>
           </div>
         </li>
         <li>
           <img src="D:\New folder\f8.png" alt="airi" />
           <div> 
             <h4>WORDPRESS BEST PRACTICES</h4>
-            <p>We follow WordPress coding best practices, as laid out by the WordPress.org theme review team, so you can be sure your theme is coded to the highest standards.
-            </p>
+            <p>We follow WordPress coding best practices, as laid out by the WordPress.org theme review team, so you can be sure your theme is coded to the highest standards.</p>
           </div>
         </li>
       </ul>
