--- a/BT-TET.html
+++ b/BT-TET.html
@@ -6,15 +6,19 @@
 	<title></title>
 	<link rel="stylesheet" href="">
 	<label >ATHEMES</label>
-	<ul>
+	
+</head>
+<body>
+	<header>
+		<ul>
 		<li><a href="" title="">HOME</a></li>
 		<li><a href="" title="">THEMES</a></li>
 		<li><a href="" title="">SUPPORT</a></li>
 		<li><a href="" title="">BLOG</a></li>
 		<li><a href="" title="">MY ACOUNT</a></li>
 	</ul>
-</head>
-<body>
+	</header>
+	<content>
 	<section>
 		<h4>AIRI</h4>
 	<span>Airi is a powerful, flexible, and modern theme for your business website. Featuring Elementor integration, this theme is an outstanding choice for basically any kind of company or freelancer site. Bringing a wealth of customization opportunities, Airi is great if you want to start a website from scratch and it's even greater if you want to use a premade Elementor layout from our growing collection. What’s more, the theme offers WooCommerce support, making it easy to sell the products you showcase on your site to your audience.</span>
@@ -116,7 +120,7 @@
 		<button>DOCUMENTATION</button>
 		<br>
 	</section>
-</body>
+	</content>
 <footer>
 	<div>
 		<h2>RECENT POSTS</h2>
@@ -148,4 +152,6 @@
 
 	
 </footer>
+</body>
+
 </html>
