--- a/btTet.html
+++ b/btTet.html
@@ -11,119 +11,115 @@
 <body>
 	<a href="aa.html">ATHEMS</a>
 	<div>
-	<p><ul>
-<a href="https://athemes.com/wordpress-themes">Themes</a>
-<a href="https://forums.athemes.com/">Support</a>
-<a href="https://athemes.com/blog/">Blog</a>
-<a href="https://athemes.com/your-account/">My Account</a>
-<ul class="sub-menu">
-	
-	</ul></p>
-	</div>
-	<h1>AIRI</h1>
-	<code>Airi is a powerful, flexible, and modern theme for your business website. Featuring Elementor integration, this theme is an outstanding choice for basically any kind of company or freelancer site. Bringing a wealth of customization opportunities, Airi is great if you want to start a website from scratch and it's even greater if you want to use a premade Elementor layout from our growing collection. What’s more, the theme offers WooCommerce support, making it easy to sell the products you showcase on your site to your audience.
+		<ul>
+      <a href="https://athemes.com/wordpress-themes">Themes</a>
+      <a href="https://forums.athemes.com/">Support</a>
+      <a href="https://athemes.com/blog/">Blog</a>
+      <a href="https://athemes.com/your-account/">My Account</a>
 
-</code>
-<img src="C:\Users\Public\Pictures\Sample Pictures\airi-previews.png" alt="">
+    </ul>
+    <br>
+  </div>
+  <content>
+    <h1>AIRI</h1>
+    <p>Airi is a powerful, flexible, and modern theme for your business website. Featuring Elementor integration, this theme is an outstanding choice for basically any kind of company or freelancer site. Bringing a wealth of customization opportunities, Airi is great if you want to start a website from scratch and it's even greater if you want to use a premade Elementor layout from our growing collection. What’s more, the theme offers WooCommerce support, making it easy to sell the products you showcase on your site to your audience.
 
+    </p>
+    <img src="C:\Users\Public\Pictures\Sample Pictures\airi-previews.png" alt="">
+    <div>
+     <span>
+      <a href="https://athemes.com/airi-demos/">DEMO</a>
+      <a href="#edd-free-download-modal"> DOWNLOAD  </a>
+      <a href="https://athemes.com/theme/airi-pro/">  GO PRO</a>
+      <a class="button docs-button" target="_blank" href="https://docs.athemes.com/category/260-airi">  DOCUMENTATION</a>
+    </span>
 
+    </div>
+
+  <section id="ribbon" class="theme-ribbon clearfix"><div class="group-left"><span>CURRENT VERSION: <strong>1.0.2</strong></span><span>LAST UPDATE: <strong>5 Nov 2018</strong></span><span>COMPATIBILITY: <strong>5.0</strong></span></div><div class="group-right"><span><strong><a target="_blank" href="">CHANGELOG</a></strong></span><span><strong><a target="_blank" href="//athemes.com/forums/">SUPPORT</a></strong></span></div></section>
+
+  <h2>FEATURES</h2>
+  <div>
+   <div>
+    <img src="C:\Users\Public\Pictures\Sample Pictures\Elementor.png" alt=""<br>ELEMENTOR SUPPORT <br>Airi includes a bunch of premade demos created with Elementor. Import the one you want, change the content, tweak the layout and your website is done.>
+
+  </div>
+  <div>
+    <img src="C:\Users\Public\Pictures\Sample Pictures\airioptions (1).png" alt=""<br>OPTIONS <br>Change colors, set the fonts you want and more. All theme options are located in the powerful Theme Customizer.>
+
+  </div>
+  <div>
+    <img src="C:\Users\Public\Pictures\Sample Pictures\atumultipledemos.png" alt="" <br>MULTIPLE DEMOS <br>Airi includes a bunch of premade demos created with Elementor. Import the one you want, change the content, tweak the layout and your website is done.>
+  </div>
+  <div>
+    <img src="C:\Users\Public\Pictures\Sample Pictures\eCommerce.png" alt=""<br>WOOCOMMERCE <br>Airi offers support for the hugely popular WooCommerce plugin. Selling your products will be a breeze.>
+  </div>
+  <div>
+    <img src="C:\Users\Public\Pictures\Sample Pictures\ tt-fonts.jpg" alt=""<br>GOOGLE FONTS <br>Easily switch fonts from the Customizer and enjoy free access to an awesome selection of Google Fonts.>
+  </div>
+  <div>
+    <img src="C:\Users\Public\Pictures\Sample Pictures\tt-translation.jpg" alt=""<br>TRANSLATION READY <br>This theme is 100% translation ready and includes the necessary files in order to make the translation process a breeze.>
+  </div>
+</div>
+</content>
+<h3>INCLUDED IN EVERY THEME</h3>
 <div>
-	<span><a href="https://athemes.com/airi-demos/">DEMO</a>
-	<a href="#edd-free-download-modal"> DOWNLOAD  </a>
-	<a href="https://athemes.com/theme/airi-pro/">  GO PRO</a>
-	<a class="button docs-button" target="_blank" href="https://docs.athemes.com/category/260-airi">  DOCUMENTATION</a>
-	</span>
-	
+ <div>
+  <img src="C:\Users\Public\Pictures\Sample Pictures\f5.png" alt=""<br>LIVE CUSTOMIZER <br>We make use of the WordPress Customizer, which allows you to preview changes to your website live, in all of our themes. This is the future of website editing.>
+
+</div>
+<div>
+  <img src="C:\Users\Public\Pictures\Sample Pictures\f2.png" alt=""<br>UPDATES <br>The work doesn’t stop once we release a theme. We regularly release updates to fix any bugs, add new features (often based on customer feedback), and stay up to date with the latest version of WordPress.>
+
+</div>
+<div>
+  <img src="C:\Users\Public\Pictures\Sample Pictures\f7.png" alt="" <br>
+  TRANSLATION READY <br>Our themes follow the best internalization practices and therefore are ready to be translated into your language.>
+
+</div>
+<div>
+  <img src="C:\Users\Public\Pictures\Sample Pictures\f6.png" alt=""<br>CROSS BROWSER SUPPORT <br>We support the most popular modern web browsers: Chrome, Firefox, IE9+ and Opera.>
+
+</div>
+<div>
+  <img src="C:\Users\Public\Pictures\Sample Pictures\user-1.png" alt=""<br>FAST SUPPORT <br>Our customers love our rapid and friendly support. Our themes are simple and easy to use, but if you need help, our support forum is always open.>
+
+</div>
+<div>
+  <img src="C:\Users\Public\Pictures\Sample Pictures\f8.png" alt=""<br>WORDPRESS BEST PRACTICES <br>We follow WordPress coding best practices, as laid out by the WordPress.org theme review team, so you can be sure your theme is coded to the highest standards.>
+
 </div>
 
-		<section id="ribbon" class="theme-ribbon clearfix"><div class="group-left"><span>CURRENT VERSION: <strong>1.0.2</strong></span><span>LAST UPDATE: <strong>5 Nov 2018</strong></span><span>COMPATIBILITY: <strong>5.0</strong></span></div><div class="group-right"><span><strong><a target="_blank" href="">CHANGELOG</a></strong></span><span><strong><a target="_blank" href="//athemes.com/forums/">SUPPORT</a></strong></span></div></section>
-
-		<h2>FEATURES</h2>
-		<div>
-			<div>
-				<img src="C:\Users\Public\Pictures\Sample Pictures\Elementor.png" alt=""<br>ELEMENTOR SUPPORT <br>Airi includes a bunch of premade demos created with Elementor. Import the one you want, change the content, tweak the layout and your website is done.>
-				
-			</div>
-		<div>
-			<img src="C:\Users\Public\Pictures\Sample Pictures\airioptions (1).png" alt=""<br>OPTIONS <br>Change colors, set the fonts you want and more. All theme options are located in the powerful Theme Customizer.>
-			
-		</div>
-		<div>
-			<img src="C:\Users\Public\Pictures\Sample Pictures\atumultipledemos.png" alt="" <br>MULTIPLE DEMOS <br>Airi includes a bunch of premade demos created with Elementor. Import the one you want, change the content, tweak the layout and your website is done.>
-		</div>
-		<div>
-			<img src="C:\Users\Public\Pictures\Sample Pictures\eCommerce.png" alt=""<br>WOOCOMMERCE <br>Airi offers support for the hugely popular WooCommerce plugin. Selling your products will be a breeze.>
-		</div>
-		<div>
-			<img src="C:\Users\Public\Pictures\Sample Pictures\ tt-fonts.jpg" alt=""<br>GOOGLE FONTS <br>Easily switch fonts from the Customizer and enjoy free access to an awesome selection of Google Fonts.>
-		</div>
-		<div>
-			<img src="C:\Users\Public\Pictures\Sample Pictures\tt-translation.jpg" alt=""<br>TRANSLATION READY <br>This theme is 100% translation ready and includes the necessary files in order to make the translation process a breeze.>
-		</div>
-		</div>
-
-	<h3>INCLUDED IN EVERY THEME</h3>
-	<div>
-		<div>
-			<img src="C:\Users\Public\Pictures\Sample Pictures\f5.png" alt=""<br>LIVE CUSTOMIZER <br>We make use of the WordPress Customizer, which allows you to preview changes to your website live, in all of our themes. This is the future of website editing.>
-			
-		</div>
-		<div>
-			<img src="C:\Users\Public\Pictures\Sample Pictures\f2.png" alt=""<br>UPDATES <br>The work doesn’t stop once we release a theme. We regularly release updates to fix any bugs, add new features (often based on customer feedback), and stay up to date with the latest version of WordPress.>
-			
-		</div>
-		<div>
-			<img src="C:\Users\Public\Pictures\Sample Pictures\f7.png" alt="" <br>
-TRANSLATION READY <br>Our themes follow the best internalization practices and therefore are ready to be translated into your language.>
-			
-		</div>
-	<div>
-		<img src="C:\Users\Public\Pictures\Sample Pictures\f6.png" alt=""<br>CROSS BROWSER SUPPORT <br>We support the most popular modern web browsers: Chrome, Firefox, IE9+ and Opera.>
-		
-	</div>
-	<div>
-		<img src="C:\Users\Public\Pictures\Sample Pictures\user-1.png" alt=""<br>FAST SUPPORT <br>Our customers love our rapid and friendly support. Our themes are simple and easy to use, but if you need help, our support forum is always open.>
-		
-	</div>
-	<div>
-		<img src="C:\Users\Public\Pictures\Sample Pictures\f8.png" alt=""<br>WORDPRESS BEST PRACTICES <br>We follow WordPress coding best practices, as laid out by the WordPress.org theme review team, so you can be sure your theme is coded to the highest standards.>
-		
-	</div>
-
-		
-	</div>
-	<div>
-		<span><a href="https://athemes.com/airi-demos/">DEMO</a>
-	<a href="#edd-free-download-modal"> DOWNLOAD  </a>
-	<a href="https://athemes.com/theme/airi-pro/">  GO PRO</a>
-	<a class="button docs-button" target="_blank" href="https://docs.athemes.com/category/260-airi">  DOCUMENTATION</a>
-	</span>
-	</div>
-</body>
+</div>
+<div>
+ <span><a href="https://athemes.com/airi-demos/">DEMO</a>
+  <a href="#edd-free-download-modal"> DOWNLOAD  </a>
+  <a href="https://athemes.com/theme/airi-pro/">  GO PRO</a>
+  <a class="button docs-button" target="_blank" href="https://docs.athemes.com/category/260-airi">  DOCUMENTATION</a>
+</span>
+</div>
 <footer>
-	<div>
-		<h4>RECENT POSTS</h4>
-		<a href="" title="">16 Best Car Rental WordPress Themes 2019</a>
-		<a href="" title="">5 Best WordPress Review Plugins 2019</a>
-		<a href="" title="">8 Best WordPress Quiz Plugins 2019</a>
-		<a href="" title="">6 Best Rich Snippets & Schema Plugins for WordPress 2019</a>
-	
-	</div>
-	<div>
-		<h2>USEFUL LINKS</h2>
-		<a href="" title="">Contact</a>
-		<a href="" title="">Pricing</a>
-		<a href="" title="">Affiliates</a>
-		<a href="" title="">About</a>
-		<a href="" title="">We’re hiring!</a>
-	</div>
-	<div>
-		<h2>SOCIAL</h2>
-		<a href="https://facebook.com" title=""><img src="file:///D:/icon-fb.png" alt=""></a>
-	</div>
-	
+  <div>
+    <h4>RECENT POSTS</h4>
+    <a href="" title="">16 Best Car Rental WordPress Themes 2019</a>
+  </div>
+  <div>
+    <h2>USEFUL LINKS</h2>
+    <a href="" title="">Contact</a>
+    <a href="" title="">Pricing</a>
+    <a href="" title="">Affiliates</a>
+    <a href="" title="">About</a>
+    <a href="" title="">We’re hiring!</a>
+  </div>
+  <div>
+   <h2>SOCIAL</h2>
+   <a href="https://facebook.com" title=""><img src="file:///D:/icon-fb.png" alt=""></a>
+ </div>
 </footer>
-Kết thúc cuộc trò chuyện
-Nhập tin nhắn...
+</body>
 
 </html>
+
+
+
+
